# flet_android_notify

./: LICENSE  README.md  changelog.MD  pyproject.toml
src/: flet_notify.py  main.py
